--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,20 @@ PROJECT_SERVICE_PORT=4002
 SCHEDULING_SERVICE_PORT=4003
 REPORTING_SERVICE_PORT=4004
 WEB_PORT=3000
+
+
+# HubSpot Configuration
+HUBSPOT_API_KEY=your-private-app-access-token-here
+
+# Pipeline and Stage IDs (you'll need to discover these)
+HUBSPOT_PIPELINE_ID=
+HUBSPOT_STAGE_STAFFING_PLANNING=
+HUBSPOT_STAGE_DISCOVERY=
+HUBSPOT_STAGE_EXECUTION=
+HUBSPOT_STAGE_ROLLOUT=
+HUBSPOT_STAGE_VALUE_REALISATION=
+HUBSPOT_STAGE_CLOSED=
+
+# Sync settings
+HUBSPOT_SYNC_ENABLED=true
+HUBSPOT_SYNC_INTERVAL_MS=1800000
