--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nest build",
-    "predev": "npx --yes kill-port 4000",
+    "predev": "echo '🧹 [API Gateway] Cleaning port 4000...' && ../../scripts/kill-port-robust.sh 4000",
     "dev": "PORT=4000 nest start --watch",
     "start": "nest start",
     "start:prod": "node dist/main",
