--- a/apps/hubspot-service/package.json
+++ b/apps/hubspot-service/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nest build",
-    "predev": "npx --yes kill-port 4005 && nest build",
+    "predev": "echo '🧹 [HubSpot Service] Cleaning port 4005 and building...' && ../../scripts/kill-port-robust.sh 4005 && nest build",
     "dev": "PORT=4005 nest start --watch",
     "start": "nest start",
     "start:prod": "node dist/main",
