--- a/apps/project-service/package.json
+++ b/apps/project-service/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nest build",
-    "predev": "npx --yes kill-port 4002",
+    "predev": "echo '🧹 [Project Service] Cleaning port 4002...' && ../../scripts/kill-port-robust.sh 4002",
     "dev": "PORT=4002 nest start --watch",
     "start": "nest start",
     "start:prod": "node dist/main",
