--- a/apps/scheduling-service/package.json
+++ b/apps/scheduling-service/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "nest build",
-    "predev": "npx --yes kill-port 4003",
-    "dev": "PORT=4003 nest start --watch",
+    "build": "nest build --webpack",
+    "predev": "echo '🧹 [Scheduling Service] Cleaning port 4003...' && ../../scripts/kill-port-robust.sh 4003",
+    "dev": "PORT=4003 nest start --watch --webpack",
     "start": "nest start",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
@@ -38,7 +38,9 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.105.0"
   }
 }
