--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -17,7 +17,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@vrm/*": ["../../packages/*/src"]
+      "@vrm/*": ["../../packages/*/dist"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
